--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,8 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.thymeleaf.cache = false
 
+spring.profiles.include=oauth
+
 spring.servlet.multipart.maxFileSize=20MB
 spring.servlet.multipart.maxRequestSize=100MB
 itemImgLocation=/Users/kimjeongsu/Desktop/shop1/item
