--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,11 @@
 			<version>2.3.9</version>
 		</dependency>
 
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-oauth2-client</artifactId>
+	</dependency>
+
 	</dependencies>
 
 	<build>
